import java.util.List;
import java.util.ArrayList;

public class Informe {
    private Mision mision_ejecutada;
    private String resultado;
    private List<String> accionesRealizadas;
    private int combustibleCons;
    private int energiaCons;
    private int estadoFinal;
    private Lista<String> observaciones;

}
