package paquete;

public class Carguero extends NaveInicial {
    public Carguero() {
        super(100, 60);
    }

    @Override
    public void cargaCombustible(int combustible) {

    }

    @Override
    public void cargaEnergia(int energia) {

    }

    @Override
    public void realizarMantenimiento() {

    }

}