package paquete;

public class Exploradora extends NaveInicial {
    public Exploradora() {
        super(60, 80);
    }

    @Override
    public void cargaCombustible(int combustible) {

    }

    @Override
    public void cargaEnergia(int energia) {

    }

    @Override
    public void realizarMantenimiento() {

    }
}
