@startuml

nave --> carguero
nave --> combate
nave --> exploradora
nave --> tripulante
nave --> Informe


class nave{
    Motorwarp motorwarp
    Asistente asistente
    ArrayList <tripulante> tripulantes
    ArrayList <Informe> bitacora
    double combustible
    double energia
    double necesidad
    double nivel



    boolean tieneRecursos()

    void cargaCombustible(cantidad)
    void consumeCombustible((cantidad)

    void cargaEnergia(cantidad))
    void consumeEnergia(cantidad))

    void cargaDesgaste(cantidad)
    void bajaDesgaste(cantidad)

    void mantenimiento()
    boolean cumpleTripulantes()
    void registraInforme()

}

class Mapa{
    matriz con objetos por celda
}

class Motorwarp{
    disponible()
    preparandoSalto()
    enWarp()
    enfriamiento()
}

class Asistente{
    Mapa mapa
    Mision mision
    preparar()
    ejecutar()
    evaluarResultado()
    cerrar()
}

class Mision{

}

class M-01{
    preparar()
    ejecutar()
    evaluarResultado()
    cerrar()

}

class M-02{
    preparar()
    ejecutar()
    evaluarResultado()
    cerrar()
    }

class M-03{
    preparar()
    ejecutar()
    evaluarResultado()
    cerrar()
    }

class Informe{
    registraInforme()
}

class tripulante{
    String origen
}

class capitan{}

class consejero{}

class teniente{}

class alferez{}

class carguero{}

class combate{}

class exploradora{}

@enduml